microk8s/istio/gateway/grpc-client-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-client-gateway
  namespace:
spec:
  selector:
    app: grpc-client-gateway-controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grpc-client.sedona.fr
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      hosts:
        - grpc-client.sedona.fr
      tls:
        mode: SIMPLE # enables HTTPS on this port
        credentialName: grpc-client-secret # fetches certs from Kubernetes secret
    - port:
        number: 9080
        name: http-wildcard
        protocol: HTTP
      hosts:
        - "*"
#    - port:
#        number: 2379 # to expose internal service via external port 2379
#        name: mongo
#        protocol: MONGO
#      hosts:
#        - "*"
