microk8s/istio/gateway/global-gateway-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: global-gateway
  namespace: quarkus-apero-code
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "rest-client-quickstart.sedona.fr"
#      tls:
#        httpsRedirect: true # sends 301 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "rest-client-quickstart.sedona.fr"
      tls:
        mode: SIMPLE # enables HTTPS on this port
        serverCertificate: /etc/istio/istio-ingressgateway-k8s-quickstart-certs/tls.crt
        privateKey: /etc/istio/istio-ingressgateway-k8s-quickstart-certs/tls.key
#        credentialName: secret/k8s-quickstart-credential
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rest-client-quickstart-vs
  namespace: quarkus-apero-code
spec:
  hosts:
    - "rest-client-quickstart.sedona.fr"
  gateways:
    - global-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rest-client-quickstart
            port:
              number: 2001
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: k8s-quickstart-vs
#  namespace: quarkus-apero-code
#spec:
#  hosts:
#    - 'k8s-quickstart.sedona.fr'
#  gateways:
#    - global-gateway
#  http:
#    - match:
#        - uri:
#            prefix: /
#      route:
#        - destination:
#            host: kubernetes-quickstart
#            port:
#              number: 2000
