microk8s/istio/gateway/k8s-quickstart-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8s-quickstart-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: k8s-quickstart-credential # must be the same as secret
      hosts:
        - k8s-quickstart.sedona.fr
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-quickstart-vs
spec:
  hosts:
    - "k8s-quickstart.sedona.fr"
  gateways:
    - k8s-quickstart-gateway
  http:
    - match:
        - uri:
            prefix: /status
        - uri:
            prefix: /delay
      route:
        - destination:
            port:
              number: 8000
            host: kubernetes-quickstart
