microk8s/istio/gateway/keycloak-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
      # - "keycloak.sedona.fr"
  #   tls:
  #     httpsRedirect: true # sends 301 redirect for http requests
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
  #     privateKey: /etc/istio/ingressgateway-certs/tls.key
  #   hosts:
  #   - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-vs
spec:
  hosts:
    - '*'
  # - "keycloak.sedona.fr"
  gateways:
    - keycloak-gateway
  http:
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: keycloak
            port:
              number: 8080
